--- a/templates/base.html
+++ b/templates/base.html
@@ -7,12 +7,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>{% block head_title %}{% endblock %}</title>
-  {% block extra_head %}
-  {% endblock %}
+
+  {% block extra_head %}{% endblock %}
+
+  <!-- Icons -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
+
+  <!-- CSS -->
   <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
   <link href="{% static 'css/mdb.min.css' %}" rel="stylesheet">
   <link href="{% static 'css/style.min.css' %}" rel="stylesheet">
+
   <style type="text/css">
     html,
     body,
@@ -22,7 +28,6 @@
     }
 
     @media (max-width: 740px) {
-
       html,
       body,
       header,
@@ -32,7 +37,6 @@
     }
 
     @media (min-width: 800px) and (max-width: 850px) {
-
       html,
       body,
       header,
@@ -40,37 +44,34 @@
         height: 100vh;
       }
     }
-
   </style>
 </head>
 
-{% include "navbar.html" %}
-
 <body>
 
-    <div class="mt-5 pt-4">
+  {% include "navbar.html" %}
+
+  <div class="mt-5 pt-4">
     {% if messages %}
-        {% for message in messages %}
+      {% for message in messages %}
         <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
           {{ message }}
           <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
-        {% endfor %}
+      {% endfor %}
     {% endif %}
-    </div>
+  </div>
 
-    {% block content %}
-    {% endblock content %}
+  {% block content %}{% endblock content %}
 
-    {% block extra_body %}
-    {% endblock %}
+  {% block extra_body %}{% endblock %}
 
-    {% include "footer.html" %}
-    {% include "scripts.html" %}
+  {% include "footer.html" %}
+  {% include "scripts.html" %}
 
-    {% block extra_scripts %}
-    {% endblock extra_scripts %}
+  {% block extra_scripts %}{% endblock extra_scripts %}
+
 </body>
 </html>
