--- a/templates/order_summary.html
+++ b/templates/order_summary.html
@@ -50,9 +50,14 @@
     <div class="d-flex justify-content-between align-items-center mt-3">
       <h4>Total: ${{ order.get_total }}</h4>
 
-      <a href="{% url 'core:payment' %}" class="btn btn-primary btn-lg">
-        Pagar con MercadoPago
-      </a>
+      <div class="d-flex gap-3">
+        <a href="{% url 'core:home' %}" class="btn btn-outline-secondary btn-lg">
+          Seguir comprando
+        </a>
+        <a href="{% url 'core:payment' %}" class="btn btn-primary btn-lg">
+          Pagar con MercadoPago
+        </a>
+      </div>
     </div>
 
   {% else %}
