--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,60 +1,68 @@
-<img src="{% static 'img/logo.jpg' %}" height="40" class="d-inline-block align-top mr-2" alt="Logo">
-<strong class="blue-text">Mercadito Kickboxing</strong>
-</a>
+{% load static %}
+{% load cart_template_tags %}
 
-<!-- Collapse -->
-<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-  aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-  <span class="navbar-toggler-icon"></span>
-</button>
+<nav class="navbar fixed-top navbar-expand-lg navbar-light white scrolling-navbar">
+  <div class="container">
 
-<!-- Links -->
-<div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <!-- Brand -->
+    <a class="navbar-brand waves-effect" href="{% url 'core:home' %}">
+      <img src="{% static 'img/logo.jpg' %}" height="40" class="d-inline-block align-top mr-2" alt="Logo">
+      <strong class="blue-text">Mercadito Kickboxing</strong>
+    </a>
 
-  <!-- Left -->
-  <ul class="navbar-nav mr-auto">
-    {% comment %}
-    <li class="nav-item active">
-      <a class="nav-link waves-effect" href="{% url 'core:home' %}">Home
-        <span class="sr-only">(current)</span>
-      </a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link waves-effect" href="{% url 'core:order-summary' %}">
-        Carrito
-      </a>
-    </li>
-    {% endcomment %}
-  </ul>
+    <!-- Collapse -->
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-  <!-- Right -->
-  <ul class="navbar-nav nav-flex-icons">
-    {% if request.user.is_authenticated %}
-    <li class="nav-item">
-      <a href="{% url 'core:order-summary' %}" class="nav-link waves-effect">
-        <i class="fas fa-shopping-cart"></i>
-        <span class="clearfix d-none d-sm-inline-block"> Carrito </span>
-      </a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link waves-effect" href="{% url 'account_logout' %}">
-        <span class="clearfix d-none d-sm-inline-block"> Logout </span>
-      </a>
-    </li>
-    {% else %}
-    <li class="nav-item">
-      <a class="nav-link waves-effect" href="{% url 'account_login' %}">
-        <span class="clearfix d-none d-sm-inline-block"> Login </span>
-      </a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link waves-effect" href="{% url 'account_signup' %}">
-        <span class="clearfix d-none d-sm-inline-block"> Signup </span>
-      </a>
-    </li>
-    {% endif %}
-  </ul>
-</div>
+    <!-- Links -->
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
-</div>
+      <!-- Left -->
+      <ul class="navbar-nav mr-auto">
+        {% comment %}
+        <li class="nav-item active">
+          <a class="nav-link waves-effect" href="{% url 'core:home' %}">Home
+            <span class="sr-only">(current)</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link waves-effect" href="{% url 'core:order-summary' %}">
+            Carrito
+          </a>
+        </li>
+        {% endcomment %}
+      </ul>
+
+      <!-- Right -->
+      <ul class="navbar-nav nav-flex-icons">
+        {% if request.user.is_authenticated %}
+        <li class="nav-item">
+          <a href="{% url 'core:order-summary' %}" class="nav-link waves-effect">
+            <i class="fas fa-shopping-cart"></i>
+            <span class="clearfix d-none d-sm-inline-block"> Carrito </span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link waves-effect" href="{% url 'account_logout' %}">
+            <span class="clearfix d-none d-sm-inline-block"> Logout </span>
+          </a>
+        </li>
+        {% else %}
+        <li class="nav-item">
+          <a class="nav-link waves-effect" href="{% url 'account_login' %}">
+            <span class="clearfix d-none d-sm-inline-block"> Login </span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link waves-effect" href="{% url 'account_signup' %}">
+            <span class="clearfix d-none d-sm-inline-block"> Signup </span>
+          </a>
+        </li>
+        {% endif %}
+      </ul>
+    </div>
+
+  </div>
 </nav>
