--- a/templates/home.html
+++ b/templates/home.html
@@ -74,7 +74,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark mdb-color lighten-3 mt-3 mb-5">
 
       <!-- Navbar brand -->
-      <span class="navbar-brand">Categories:</span>
+      <span class="navbar-brand">Categorías:</span>
 
       <!-- Collapse button -->
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav"
@@ -87,21 +87,16 @@
 
         <!-- Links -->
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">All
-              <span class="sr-only">(current)</span>
+          <li class="nav-item {% if not request.GET.category %}active{% endif %}">
+            <a class="nav-link" href="{% url 'core:home' %}">Todas
+              {% if not request.GET.category %}<span class="sr-only">(current)</span>{% endif %}
             </a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Shirts</a>
+          {% for category in categories %}
+          <li class="nav-item {% if request.GET.category == category.slug %}active{% endif %}">
+            <a class="nav-link" href="?category={{ category.slug }}">{{ category.title }}</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Sport wears</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Outwears</a>
-          </li>
-
+          {% endfor %}
         </ul>
         <!-- Links -->
 
@@ -127,8 +122,7 @@
           <div class="card">
 
             <div class="view overlay">
-              {% comment %} <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Vertical/12.jpg"
-                class="card-img-top" {% endcomment %} <img src="{{ item.image.url }}" class="card-img-top">
+              <img src="{{ item.image.url }}" class="card-img-top" alt="{{ item.title }}">
               <a href="{{ item.get_absolute_url }}">
                 <div class="mask rgba-white-slight"></div>
               </a>
@@ -136,12 +130,13 @@
 
             <div class="card-body text-center">
               <a href="" class="grey-text">
-                <h5>{{ item.get_category_display }}</h5>
+                <h5>{{ item.category.title }}</h5>
               </a>
               <h5>
                 <strong>
                   <a href="{{ item.get_absolute_url }}" class="dark-grey-text">{{ item.title }}
-                    <span class="badge badge-pill {{ item.get_label_display }}-color">NEW</span>
+                    {% if item.label %}<span class="badge badge-pill {{ item.label.css_class }}">{{ item.label.title
+                      }}</span>{% endif %}
                   </a>
                 </strong>
               </h5>
