--- a/templates/home.html
+++ b/templates/home.html
@@ -134,10 +134,7 @@
               </a>
               <h5>
                 <strong>
-                  <a href="{{ item.get_absolute_url }}" class="dark-grey-text">{{ item.title }}
-                    {% if item.label %}<span class="badge badge-pill {{ item.label.css_class }}">{{ item.label.title
-                      }}</span>{% endif %}
-                  </a>
+                  <a href="{{ item.get_absolute_url }}" class="dark-grey-text">{{ item.title }}</a>
                 </strong>
               </h5>
 
