readme and requirement

--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -129,7 +129,7 @@
       background: #000;
       padding: 0 15px;
       position: relative;
-      color: #7a0f0f;
+      color: #fff;
       font-size: 14px;
     }
 
