--- a/templates/home.html
+++ b/templates/home.html
@@ -71,7 +71,7 @@
   <div class="container">
 
     <!--Navbar-->
-    <nav class="navbar navbar-expand-lg navbar-dark mdb-color lighten-3 mt-3 mb-5">
+    <nav class="navbar navbar-expand-lg navbar-dark mt-3 mb-5" style="background-color: #6b0f1a;">
 
       <!-- Navbar brand -->
       <span class="navbar-brand">Categorías:</span>
